# Metal-cpp-Tutorial-1-Creating-a-Window

./: CMakeLists.txt  README.md
include/metal-cmake/metal-cpp/Foundation/: NSBundle.hpp  NSPrivate.hpp
src/: PCH.h  main.cpp
src/core/: application.cpp  application.h
src/graphic/: renderer.cpp  renderer.h  view.h
